10-flask-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: assignment02
  name: flaskserver
  labels:
    app: flaskserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flaskserver
  template:
    metadata:
      labels:
        app: flaskserver
    spec:
      containers:
        - name: flaskserver
          image: git.systementor.se/andreas.eliasson/urbanlegends-flasksite
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata: 
  namespace: assignment02
  name: flaskserver-service
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
  labels:
    app: flaskserver
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: flaskserver
  sessionAffinity: None
