11-goapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: assignment02
  name: goapi
  labels:
    app: goapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goapi
  template:
    metadata:
      labels:
        app: goapi
    spec:
      containers:
        - name: goapi
          image: git.systementor.se/andreas.eliasson/urbanlegends-goapi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: 
  namespace: assignment02
  name: goapi-service
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
  labels:
    app: goapi
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: goapi
  sessionAffinity: None
