60-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: assignment02
  name: flaskserver-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /path-prefix
spec:
  rules:
    - host: "legendsunveiled.strangled.net"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flaskserver-service
                port:
                  number: 80
